add project job-hostely january to february

--- a/cv.tex
+++ b/cv.tex
@@ -123,12 +123,12 @@ MERN Stack Developer with 2 years of experience in building scalable web applica
           \resumeItem{\textbf{Built with :} LangChain + LangGraph agent architecture,GROQ LLaMA3 70B for ultra-fast reasoning,RAG (Retrieval-Augmented Generation) with documents indexed from the official MU website,Pinecone as vector database,real-time web searching using tavily search tool}
       \resumeItemListEnd
  \resumeProjectHeading
-      {\textbf{MU Chatbot} $|$ \emph{Python,javascript,Jupyter Notebook }}{july 2025 -- august 2025}
+      {\textbf{Job Hostely} $|$ \emph{javascript }}{january 2025 -- February 2025}
       \resumeItemListStart
-        \resumeItem{This intelligent chatbot is designed to help students, applicants, and staff get instant answers about courses, admissions, academic calendars, and campus life — all through a smooth, conversational interface.}
-        \resumeItem{\textbf{Frontend :} React, Tailwind CSS, and Framer Motion}
-         \resumeItem{\textbf{Backend :} Python + Flask}
-          \resumeItem{\textbf{Built with :} LangChain + LangGraph agent architecture,GROQ LLaMA3 70B for ultra-fast reasoning,RAG (Retrieval-Augmented Generation) with documents indexed from the official MU website,Pinecone as vector database,real-time web searching using tavily search tool}
+        \resumeItem{A modern job portal built with the MERN stack that connects job seekers with employers efficiently. Features include job listings, user authentication, and a responsive interface for seamless experience across devices.}
+        \resumeItem{\textbf{Frontend :} React, Tailwind CSS}
+         \resumeItem{\textbf{Backend :} node.js express.js}
+          \resumeItem{\textbf{Database :} MongoDB}
       \resumeItemListEnd
  
 \resumeSubHeadingListEnd
