--- a/cv.tex
+++ b/cv.tex
@@ -111,7 +111,8 @@ MERN Stack Developer with 2 years of experience in building scalable web applica
       \resumeItemListStart
         \resumeItem{Developing a web-based Learning Management System (LMS) using MERN stack, integrating AI-powered text and image generation to enhance interactive learning and personalized content delivery.}
         \resumeItem{\textbf{Frontend :} React, Tailwind CSS, and Framer Motion,ShadCN UI}
-         \resumeItem{\textbf{Backend :} node express mongodb}
+         \resumeItem{\textbf{Backend :} node express }
+          \resumeItem{\textbf{Database :} MongoDB}
           \resumeItem{\textbf{AI Tools :}GoogleGenerativeAI,GROQ llama3-70b-8192 for ultra-fast reasoning,}
       \resumeItemListEnd
   \resumeProjectHeading
@@ -120,7 +121,8 @@ MERN Stack Developer with 2 years of experience in building scalable web applica
         \resumeItem{This intelligent chatbot is designed to help students, applicants, and staff get instant answers about courses, admissions, academic calendars, and campus life — all through a smooth, conversational interface.}
         \resumeItem{\textbf{Frontend :} React, Tailwind CSS, and Framer Motion}
          \resumeItem{\textbf{Backend :} Python + Flask}
-          \resumeItem{\textbf{Built with :} LangChain + LangGraph agent architecture,GROQ LLaMA3 70B for ultra-fast reasoning,RAG (Retrieval-Augmented Generation) with documents indexed from the official MU website,Pinecone as vector database,real-time web searching using tavily search tool}
+          \resumeItem{\textbf{Database :} Pinecone}
+          \resumeItem{\textbf{AI :} LangChain + LangGraph agent architecture,GROQ LLaMA3 70B for ultra-fast reasoning,RAG (Retrieval-Augmented Generation) with documents indexed from the official MU website,real-time web searching using tavily search tool}
       \resumeItemListEnd
  \resumeProjectHeading
       {\textbf{Job Hostely} $|$ \emph{javascript }}{january 2025 -- February 2025}
